examples/test/testpolicy6242.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6242
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value41
          key48: value23
      podSelector:
        matchLabels:
          key11: value25
          key38: value15
